--- a/client/src/components/Button/styles.module.css
+++ b/client/src/components/Button/styles.module.css
@@ -33,3 +33,13 @@
     box-shadow: 0 0 10px 0 #6487df inset, 0 0 10px 4px #6487df;
     color: #ffffffff;
 }
+
+.button:disabled{
+    opacity: 0.5;
+    cursor: default;
+}
+
+.button:disabled:hover{
+    box-shadow: none;
+    box-shadow: 0 0 40px 40px #6487df inset, 0 0 0 0 #6487df;
+}
